test/files/pos/macro-annot-unused-param/Test_2.scala
//> using options -Ymacro-annotations -Werror -Wmacros:default -Wunused:params
@mymacro
class X

object Test {
  println(X.f(123))
}
