test/files/neg/t12953-expansion-b/Client_2.scala

//> using options -Werror -Wunused:locals -Xlint:missing-interpolator -Wmacros:after

import Macro.id

object Test extends App {
  println {
    id {
      println("goodbye, cruel world of $unusedVariable")
    }
  }
}
